# python-project-lvl3

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint_and_tests.yml
page_loader/: __init__.py  changer.py  files_manager.py  loader.py  logger.py  manager.py  namer.py  page_loader.py  web_manager.py
page_loader/scripts/: page_loader.py
tests/: test_changer.py  test_files_manager.py  test_manager.py  test_namer.py  test_page-loader.py  test_page_loader.py  test_web_manager.py
tests/fixtures/change_lines/: expected_1.html  expected_2.html  expected_3.html  line_1.html  line_2.html
