[tool.poetry]
name = "hexlet-code"
version = "0.1.1"
description = ""
authors = ["Evchik <elcric66@gmail.com>"]

packages = [
    {include = "page_loader"},
]

[tool.poetry.dependencies]
python = "^3.8"
pyfakefs = "^4.5.3"
colorama = "^0.4.4"
progress = "^1.6"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
requests = "^2.26.0"
requests-mock = "^1.9.3"
flake8-noqa = "^1.2.1"
logger = "^1.4"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
